# FiwixOS

./: README  README.md  etc.tar.bz2  indent-2.2.13.patch  install.sh  make_media.sh  makeall.sh
base/: basesystem.tar.bz2  install.sh  make_media.sh
base/iso/: LICENSE  README
builds/src/: SDL-1.2.15.patch  autoconf-2.69.patch  automake-1.15.1.patch  busybox-1.01.patch  coreutils-9.1.patch  cpio-2.14.tar.bz2  ed-1.19.patch  expat-2.5.0.patch  findutils-4.4.2.patch  gawk-3.1.8.patch  (+19 more)
iso/: LICENSE
src/: ZEsarUX-13.0.patch  aalib-1.4.0.patch  at-3.2.5.patch  autoconf-2.64.patch  automake-1.11.1.patch  binutils-2.25.1.patch  busybox-1.01.patch  byacc-20230521.tgz  byacc-20241231.tgz  bzip2-1.0.8.patch  chkconfig-1.3.30.2.patch  coreutils-9.1.patch  cpio-2.15.patch  dash-0.5.12.patch  ddrescue-1.28.patch  ddrescue-1.28.tar.lz  ddrescue-1.29.tar.lz  dialog-1.3-20230209.tgz  dialog-1.3-20250817.tgz  diffstat-1.66.tgz  diffstat-1.68.tgz  diffutils-3.10.patch  diffutils-3.12.patch  diffutils-3.12.tar.xz  dmidecode-3.6.patch  dmidecode-3.6.tar.xz  dos2unix-7.5.2.patch  e2fsprogs-1.32.patch  e2fsprogs-1.37.patch  e2fsprogs-1.40.11.patch  e2fsprogs-libs-1.37.patch  e2fsprogs-libs-1.40.11.patch  e3-2.7.1.patch  ed-1.20.2.patch  ed-1.20.2.tar.lz  ed-1.22.2.patch  ed-1.22.2.tar.lz  file-5.45.patch  file-5.46.patch  flex-2.6.4.patch  (+83 more)
toolchain/: binutils-2.25.1.patch+ld-emulparams-elf_i386_fiwix.sh  gcc-4.7.4.patch  gcc-4.7.4.patch+gcc-config-fiwix.h  make-toolchain.sh
toolchain/newlib-4.2.0/newlib/libc/sys/fiwix/orig/: Makefile.am  Makefile.am.new  Makefile.in  configure
(+302 files in other folders)
